feat: basic encoding

--- a/internal/gen/_template/encode.tmpl
+++ b/internal/gen/_template/encode.tmpl
@@ -2,6 +2,14 @@
 {{ define "encode" }}{{ $s := . }}
 
 func ({{ $s.Receiver }} *{{ $s.Name }}) EncodeJSON(e *jx.Encoder) error {
+	{{- range $f := $s.Fields }}
+	{
+		// Field {{ $f.Name }}.
+        e.Field("{{ $f.Key }}", func(e *jx.Encoder) {
+            e.{{ $f.EncodeMethod }}({{ $s.Receiver }}.{{ $f.Name }})
+        })
+    }
+	{{- end }}
     return nil
 }
 
