--- a/internal/gen/_template/header.tmpl
+++ b/internal/gen/_template/header.tmpl
@@ -6,13 +6,13 @@ package {{ $.Package }}
 
 import (
 "context"
-"errors"
 "fmt"
-"sort"
-"strings"
+  "sort"
+  "strings"
 
-"github.com/ernado/jxgen"
-"github.com/go-faster/jx"
+  "github.com/ernado/jxgen"
+  "github.com/go-faster/jx"
+  "github.com/go-faster/errors"
 )
 
 // No-op definition for keeping imports.
