--- a/internal/gen/_template/encode.tmpl
+++ b/internal/gen/_template/encode.tmpl
@@ -3,6 +3,7 @@
 
 // EncodeJSON implements jxgen.Encoder interface for {{ $s.Name }}.
 func ({{ $s.Receiver }} *{{ $s.Name }}) EncodeJSON(e *jx.Encoder) error {
+	e.ObjStart()
 	{{- range $f := $s.Fields }}
 	{
         e.Field("{{ $f.Key }}", func(e *jx.Encoder) {
@@ -10,10 +11,12 @@ func ({{ $s.Receiver }} *{{ $s.Name }}) EncodeJSON(e *jx.Encoder) error {
         })
     }
 	{{- end }}
+	e.ObjEnd()
     return nil
 }
 
 func ({{ $s.Receiver }} *{{ $s.Name }}) WriteJSON(w *jx.Writer)  {
+	w.ObjStart()
 	{{- range $i, $f := $s.Fields }}
 	{
 		{{- if gt $i 0 }}
@@ -23,6 +26,7 @@ func ({{ $s.Receiver }} *{{ $s.Name }}) WriteJSON(w *jx.Writer)  {
 		w.{{ $f.EncodeMethod }}({{ $s.Receiver }}.{{ $f.Name }})
     }
 	{{- end }}
+	w.ObjEnd()
 }
 
 
